...
                                                                    <gridColumn id="Ppr-y5-3kY"/>
                                                                </columns>
                                                                <gridCells>
                                                                    <gridCell row="4aW-H1-p6Y" column="4vB-sx-DsT" id="iVP-HC-s0P">
                                                                        <textField key="contentView" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="485-gc-H8E">
                                                                            <rect key="frame" x="47" y="132" width="44" height="16"/>
                                                                            <textFieldCell key="cell" lineBreakMode="clipping" alignment="left" title="Name:" id="xRA-rr-zXc">
                                                                                <font key="font" usesAppearanceFont="YES"/>
                                                                                <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                                                                <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                                                            </textFieldCell>
                                                                        </textField>
                                                                    </gridCell>
...
                                                                <outlet property="textField" destination="iFc-Ay-JNJ" id="x81-iU-Lbz"/>
                                                            </connections>
                                                        </tableCellView>
                                                    </prototypeCellViews>
                                                </tableColumn>
                                                <tableColumn identifier="UpSpeed" width="92" minWidth="10" maxWidth="3.4028234663852886e+38" id="eFf-hN-9Ew">
                                                    <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left" title="Up speed">
                                                        <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                    </tableHeaderCell>
                                                    <textFieldCell key="dataCell" lineBreakMode="truncatingTail" selectable="YES" editable="YES" alignment="left" title="Text Cell" id="Aqc-bm-aYs">
                                                        <font key="font" metaFont="system"/>
                                                        <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
...
                                                                <outlet property="textField" destination="dQd-RN-HLT" id="P8e-9g-Yda"/>
                                                            </connections>
                                                        </tableCellView>
                                                    </prototypeCellViews>
                                                </tableColumn>
                                            </tableColumns>
                                            <accessibility identifier="torrents_table"/>
                                            <connections>
                                                <action trigger="doubleAction" selector="doubleClick:" target="kH5-bb-4fW" id="7e0-bj-na8"/>
                                                <outlet property="menu" destination="e5c-p6-zLK" id="IWd-JT-8rL"/>
                                            </connections>
                                        </tableView>
                                    </subviews>
...
